Inicio de subida de Screen App

--- a/screen-app/index.html
+++ b/screen-app/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/925af5c22c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Screen App</title>
 </head>
 <body>
     <section>
-        <h2>Screen App</h2>
         <!-- Load -->
         <div class="contentLoad">
             <div class="centro">
@@ -18,8 +19,9 @@
         </div>
         <!-- Alert -->
         <p class="alert"></p>
-        <div class="contet">
-
+        <div class="content">
+            <h2>Screen App</h2>
+            <ul class="ul"></ul>
         </div>
     </section>
     <script src="js/config.js" type="module"></script>
